samples/_failures_safe/1761511610_551408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c43b981.c: In function ‘main’:
./samples/SAFE/__tmp_2c43b981.c:142: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2c43b981.c:141:9: error: expected declaration or statement at end of input
  141 |         if
      |         ^~
./samples/SAFE/__tmp_2c43b981.c:141:9: error: expected declaration or statement at end of input
